@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.01.18036 (27 Feb 2011)
+
+  27 Feb 2011; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.01.17865.ebuild, +portage-2.2.01.18036.ebuild:
+  Version bump, matches portage-2.2.0_alpha25
+
 *portage-2.2.01.17901 (10 Feb 2011)
 
   10 Feb 2011; Fabian Groffen <grobian@gentoo.org>
